--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <div id="game">
-        <div id="nameInputSection">
+        <form id="nameForm">
             <input type="text" id="playerNameInput" placeholder="Enter your name">
-            <button id="submitNameButton">Submit</button>
-        </div>
+            <button type="submit" id="submitNameButton">Submit</button>
+        </form>
         <span id="playerNameDisplay"></span>
         <div id="gameSection" style="display: none;">
         </div>
